# tetrio-tournament-checker-bot

./: .env.example  .gitignore  Makefile  README.md  bot.py  migrate.py  pyproject.toml
cogs/: checker.py  help.py
